--- a/_assets/stylesheets/_typography.scss
+++ b/_assets/stylesheets/_typography.scss
@@ -1,4 +1,4 @@
-html {
+html, body {
   font-family: $font-family;
   font-size: $font-base;
   line-height: $vertical-rhythm-ratio;
@@ -19,7 +19,6 @@ html {
 h1, h2, h3, h4, h5, h6 {
   font-family: $font-family-header;
   font-weight: $font-weight-header;
-  // @include jl-padding(rem(16px));
 }
 
 h1 {
