Fix monospace font bug
Webkit monospace font bug (or perhaps pixel rounding problem) throws off
vertical rhythm when using monospace fonts. Fix by setting
vertical-align to top or bottom.

--- a/_assets/stylesheets/_base.scss
+++ b/_assets/stylesheets/_base.scss
@@ -31,3 +31,7 @@ p, ul, ol, dl, blockquote, pre, span, code,
 td, th, textarea, small, caption {
   @include jl-vertical-rhythm($font-size-base);
 }
+
+code {
+  vertical-align: bottom; // fixes a monospace font bug in the browser
+}
