--- a/_assets/stylesheets/helpers/_vertical_rhythm.scss
+++ b/_assets/stylesheets/helpers/_vertical_rhythm.scss
@@ -10,13 +10,14 @@
 // @top-rows: number of rows (height of $line-height-base) on top (optional)
 // @use-height: true if using an element that has height beyond font-size (buttons, images, divs, etc.) (optional)
 // @border: total border in rems, px, or ems used on element (sum of top and bottom border). this prevents border from throwing off rhythm. (optional)
+//   since the border-box model is being used, border is only needed on elements that are not using height. that is where @use-height is false
 //
 // ***Note: $bottom-rows and $top-rows allow decimal (and negative) values. keep in mind a decimal value
 // will knock off the vertical rhythm for that element, though it will pick up again after the disturbance
 //
-@mixin jl-vertical-rhythm($font-size, $bottom-rows: 1, $top-rows: 0, $use-height: false, $border: 0px) {
+@mixin jl-vertical-rhythm($font-size, $bottom-rows: 1, $top-rows: 0, $use-height: false, $border: 0rem) {
   $font-size: jl-convert-to($font-size, 'rem');
-  $border: jl-convert-to($border, 'rem');
+  $border: if($use-height, 0rem, jl-convert-to($border, 'rem');
   $multiplier: ceil($font-size / $line-height-base);
   // check if height based element
   // if so use height property for height, otherwise use line-height property
