--- a/_assets/stylesheets/_variables.scss
+++ b/_assets/stylesheets/_variables.scss
@@ -34,3 +34,7 @@ $font-family-title: 'Jim Nightshade', Helvetica, sans-serif;
 $font-family-header: 'Lustria', Helvetica, serif;
 $font-family-code: 'Inconsolata', Courier, monospace;
 
+$black: #000;
+$white: #fff;
+$font-color: $black;
+$background-color: $white;
