--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="post">
+<div class="post {{ page.title | split: ' ' | join: '-' | downcase }}">
 
   <header class="post-header">
     <h1>{{ page.title }}</h1>
