--- a/_assets/stylesheets/pages/_header.scss
+++ b/_assets/stylesheets/pages/_header.scss
@@ -3,7 +3,7 @@
 }
 
 .jl-title {
-  @include jl-vertical-rhythm($font-size-title);
-  font-family: $font-family-title;
-  font-weight: $font-weight-title;
+  @include jl-vertical-rhythm($jl-font-size-title);
+  font-family: $jl-font-family-title;
+  font-weight: $jl-font-weight-title;
 }
