Fix monospace vertical rhythm issue (for the millionth time)
For some reason, vertical rhythm is off for monospace fonts that
are not Courier. This only happens with a base font-size of 18px (1rem).
Example font: Inconsolata. Possibly a sub-pixel rounding error? Or
browser error rendering monospace fonts? Or problem with the font
itself?

Use Courier until this problem is solved.

--- a/_assets/stylesheets/_variables.scss
+++ b/_assets/stylesheets/_variables.scss
@@ -32,7 +32,7 @@ $jl-font-weight-title:  700;
 $jl-font-family:        'Quattrocento Sans', Arial, sans-serif;
 $jl-font-family-title:  'Jim Nightshade', Helvetica, sans-serif;
 $jl-font-family-header: 'Lustria', Helvetica, serif;
-$jl-font-family-code:   'Inconsolata', Courier, monospace;
+$jl-font-family-code:   Courier, monospace; // 'Inconsolata',
 
 $jl-black: #000;
 $jl-white: #fff;
