--- a/_assets/stylesheets/_solarized_light.scss
+++ b/_assets/stylesheets/_solarized_light.scss
@@ -11,8 +11,19 @@
   overflow: hidden;
 }
 
+pre {
+  @include jl-vertical-rhythm($jl-font-size-base, $bottom-rows: 0);
+}
+
 code {
   font-family: $jl-font-family-code;
+  vertical-align: bottom; // fixes a monospace font bug in the browser
+}
+
+// inline code blocks
+p code, ul code {
+  color: lighten($jl-black, 20%);
+  background-color: darken($jl-background-color, 3%);
 }
 
 .highlight .c { color: #586E75 } /* Comment */
