Clean up comments

--- a/_assets/stylesheets/_post_specific.scss
+++ b/_assets/stylesheets/_post_specific.scss
@@ -1,6 +1,6 @@
-// -----------------
+// =================
 // Post specific CSS
-// -----------------
+// =================
 // format: post title to lower case separated by dashes
 
 .vertical-rhythm {
