--- a/_assets/stylesheets/_variables.scss
+++ b/_assets/stylesheets/_variables.scss
@@ -1,6 +1,11 @@
+// =========
+// Variables
+// =========
+
 $jl-font-base: 16px;
 
-// variables for sass libraries
+// ----------------------------
+// Variables for sass libraries
 // ----------------------------
 //breakpoint
 $breakpoint-to-ems: true !global;
