--- a/_assets/stylesheets/helpers/_unit_conversion.scss
+++ b/_assets/stylesheets/helpers/_unit_conversion.scss
@@ -1,6 +1,6 @@
-// ---------------
+// ===============
 // Unit Conversion
-// ---------------
+// ===============
 
 // Converts a value (rem, em, px, or unitless) to the desired units
 // More robust then bourbons rem() or em() functions
