--- a/_assets/stylesheets/helpers/_vertical_rhythm.scss
+++ b/_assets/stylesheets/helpers/_vertical_rhythm.scss
@@ -1,6 +1,6 @@
-// ---------------
+// ===============
 // Vertical Rhythm
-// ---------------
+// ===============
 
 // Set up vertical rhythm for an element
 //
