Use Open Source Pro font for code

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <!-- Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Lustria|Jim+Nightshade|Quattrocento+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro|Lustria|Jim+Nightshade|Quattrocento+Sans' rel='stylesheet' type='text/css'>
 
     <!-- Custom CSS -->
     {% stylesheet app %}
