--- a/_assets/stylesheets/_variables.scss
+++ b/_assets/stylesheets/_variables.scss
@@ -37,7 +37,7 @@ $jl-font-weight-title:  700;
 $jl-font-family:        'Quattrocento Sans', Arial, sans-serif;
 $jl-font-family-title:  'Jim Nightshade', Helvetica, sans-serif;
 $jl-font-family-header: 'Lustria', Helvetica, serif;
-$jl-font-family-code:   Courier, monospace; // 'Inconsolata',
+$jl-font-family-code:   'Source Code Pro', Courier, monospace;
 
 $jl-black: #000;
 $jl-white: #fff;
