Add vertical rhythm post
Update post styles (for debugging base-line)

--- a/_assets/stylesheets/_post_specific.scss
+++ b/_assets/stylesheets/_post_specific.scss
@@ -3,7 +3,7 @@
 // =================
 // format: post title to lower case separated by dashes
 
-.vertical-rhythm {
+.groove-to-a-vertical-rhythm {
   @include jl-responsive(
     (background: url(http://basehold.it/i/24)),
     (
