--- a/_assets/stylesheets/app.scss
+++ b/_assets/stylesheets/app.scss
@@ -7,7 +7,7 @@
 
 @import 'variables';
 @import 'helpers';
-@import 'solarized_light';
+@import 'tomorrow_night_syntax';
 @import 'base';
 @import 'typography';
 @import 'pages';
