--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,7 +1,8 @@
 <div id="disqus_thread"></div>
 <script type="text/javascript">
-  var disqus_shortname = '{{site.disqus_shortname}}';
-  var disqus_url = '{{ site.url }}{{ page.url }}';
+  var disqus_shortname = '{{ site.usernames.disqus }}';
+  var disqus_url = '{{ page.url }}';
+  var disqus_title = '{{ page.title }}';
   (function() {
       var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
       dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
