Specify post-specific css classes in yml frontmatter

--- a/_assets/stylesheets/_post_specific.scss
+++ b/_assets/stylesheets/_post_specific.scss
@@ -1,9 +1,9 @@
 // =================
 // Post specific CSS
 // =================
-// format: post title to lower case separated by dashes
+// specify class in yaml frontmatter
 
-.groove-to-a-vertical-rhythm {
+.vertical-rhythm {
   @include jl-responsive(
     (background: url(http://basehold.it/i/24)),
     (
