--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <h2>{{ site.title }}</h2>
 
     <div>
-      <a href="https://github.com/{{ site.username }}">
+      <a href="https://github.com/{{ site.usernames.github }}">
         <span>
           <svg version="1.1" class="github-icon-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
@@ -18,9 +18,8 @@
             c0,0.208,0.14,0.449,0.534,0.373c3.081-1.028,5.302-3.935,5.302-7.362C15.76,3.906,12.285,0.431,7.999,0.431z"/>
           </svg>
         </span>
-        <span>{{ site.username }}</span>
       </a>
-      <a href="https://twitter.com/{{ site.username }}">
+      <a href="https://twitter.com/{{ site.usernames.twitter }}">
         <span>
           <svg version="1.1" class="twitter-icon-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
@@ -33,7 +32,6 @@
             c6.015,0,9.304-4.983,9.304-9.304c0-0.142-0.003-0.283-0.009-0.423C14.976,4.29,15.531,3.714,15.969,3.058z"/>
           </svg>
         </span>
-        <span>{{ site.username }}</span>
       </a>
     </div>
 
