No longer user deprecated border-box-sizing mixin from Susy
- Mark todo to update once using Susy 2.2

--- a/_assets/stylesheets/helpers/_layouts.scss
+++ b/_assets/stylesheets/helpers/_layouts.scss
@@ -9,7 +9,7 @@ $susy: (
   gutters: 1/4,
   // debug: (image: show)
 );
-@include border-box-sizing;
+@include global-box-sizing(border-box); //TODO: [Susy 2.2], $inherit: true);
 
 // layout properties
 $jl-layouts: (
