Add a margin around body
Give spacing around content.
Possibly add a wrapper class in the future.

--- a/_assets/stylesheets/_base.scss
+++ b/_assets/stylesheets/_base.scss
@@ -15,14 +15,5 @@
 // }
 
 body {
-  @include jl-container(sm);
-  @include jl-breakpoint(md) {
-    @include jl-container(md);
-  }
-  @include jl-breakpoint(lg) {
-    @include jl-container(lg);
-  }
-  @include jl-breakpoint(xl) {
-    @include jl-container(xl);
-  }
+  margin: 1.5rem;
 }
