--- a/_assets/stylesheets/_tomorrow_night_syntax.scss
+++ b/_assets/stylesheets/_tomorrow_night_syntax.scss
@@ -15,8 +15,8 @@ code {
 
 // inline code blocks
 p code, ul code {
-  color: lighten($jl-black, 20%);
-  background-color: darken($jl-background-color, 3%);
+  color: lighten($jl-font-color, 15%);
+  background-color: darken($jl-background-color, 5%);
 }
 
 .highlight {
