--- a/_assets/stylesheets/pages/_footer.scss
+++ b/_assets/stylesheets/pages/_footer.scss
@@ -4,6 +4,7 @@
 
 .github-icon-svg,
 .twitter-icon-svg {
+  fill: lighten($jl-khaki, 5%);
   display: inline-block;
   width: rem(16px);
   height: rem(16px);
