Update header fonts
Use a different font for post titles (h1s)

--- a/_assets/stylesheets/_variables.scss
+++ b/_assets/stylesheets/_variables.scss
@@ -34,10 +34,11 @@ $jl-font-weight-strong: 500;
 $jl-font-weight-header: 500;
 $jl-font-weight-title:  700;
 
-$jl-font-family:        'Quattrocento Sans', Arial, sans-serif;
-$jl-font-family-title:  'Jim Nightshade', Helvetica, sans-serif;
-$jl-font-family-header: 'Lustria', Helvetica, serif;
-$jl-font-family-code:   'Source Code Pro', Courier, monospace;
+$jl-font-family:            'Quattrocento Sans', Arial, sans-serif;
+$jl-font-family-post-name:  'Lustria', Helvetica, sans-serif;
+$jl-font-family-title:      'Abril Fatface', Helvetica, sans-serif;
+$jl-font-family-header:     'Raleway', Helvetica, serif;
+$jl-font-family-code:       'Source Code Pro', Courier, monospace;
 
 $jl-black:        #000;
 $jl-white:        #fff;
