--- a/_assets/stylesheets/_typography.scss
+++ b/_assets/stylesheets/_typography.scss
@@ -31,12 +31,14 @@ td, th, textarea, small, caption {
 // Header styles
 // -------------
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: $jl-font-family-header;
+h1 {
+  font-family: $jl-font-family-post-name;
   font-weight: $jl-font-weight-header;
 }
 
 h2, h3, h4, h5, h6 {
+  font-family: $jl-font-family-header;
+  font-weight: $jl-font-weight-header;
   color: lighten($jl-font-color, 5%);
 }
 
