--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -6,6 +6,7 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-53645628-1', 'auto');
+    ga('require', 'displayfeatures');
     ga('send', 'pageview');
   </script>
 {% endif %}
