--- a/_assets/stylesheets/app.scss
+++ b/_assets/stylesheets/app.scss
@@ -7,6 +7,7 @@
 
 @import 'variables';
 @import 'helpers';
+@import 'icon_fonts';
 @import 'tomorrow_night_syntax';
 @import 'base';
 @import 'typography';
