--- a/_assets/stylesheets/pages/_footer.scss
+++ b/_assets/stylesheets/pages/_footer.scss
@@ -2,12 +2,7 @@
 // Footer
 // ======
 
-.github-icon-svg,
-.twitter-icon-svg {
-  fill: lighten($jl-khaki, 5%);
-  display: inline-block;
-  width: rem(16px);
-  height: rem(16px);
-  top: rem(3px);
-  position: relative;
+.jl-Icon-github,
+.jl-Icon-twitter {
+  font-size: 2rem;
 }
