Move RSS link to icon in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,9 @@
       <a href="https://twitter.com/{{ site.usernames.twitter }}">
         <span class="jl-Icon-twitter"></span>
       </a>
+      <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
+        <span class="jl-Icon-rss"></span>
+      </a>
     </div>
 
     <div>
