Fix nested lists
Do not add bottom margin for nested ul's/ol's

--- a/_assets/stylesheets/_typography.scss
+++ b/_assets/stylesheets/_typography.scss
@@ -23,6 +23,11 @@ td, th, textarea, small, caption {
   @include jl-vertical-rhythm($jl-font-size-base);
 }
 
+// remove bottom margin from nested lists
+li ul, li ol {
+  @include jl-vertical-rhythm($jl-font-size-base, $bottom-rows: 0);
+}
+
 .post-content p {
   text-align: justify;
 }
