--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    {% if page.url == "/404/" %}
+      <meta http-equiv="refresh" content="3; url=/">
+    {% endif %}
     <!-- Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Raleway|Abril+Fatface|Source+Code+Pro|Lustria|Quattrocento+Sans' rel='stylesheet' type='text/css'>
 
