--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    {% if page.url == "/404/" %}
+    {% if page.url == "/404.html" %}
       <meta http-equiv="refresh" content="3; url=/">
     {% endif %}
     <!-- Fonts -->
