SUIT up existing CSS
- Still more work to do, but this SUITs up what is there (whether or not
  the classes have any CSS tied to them yet)

--- a/_assets/stylesheets/_post_specific.scss
+++ b/_assets/stylesheets/_post_specific.scss
@@ -3,7 +3,7 @@
 // =================
 // specify class in yaml frontmatter
 
-.vertical-rhythm {
+.VerticalRhythmPost {
   @include jl-responsive(
     (background: url(http://basehold.it/i/24)),
     (
