--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,4 @@
-<footer class="site-footer">
-
+<footer class="Site-footer">
     <h2>{{ site.title }}</h2>
 
     <div>
@@ -13,11 +12,5 @@
         <span class="jl-Icon-rss"></span>
       </a>
     </div>
-
-    <div>
-      <p>{{ site.description }}</p>
-    </div>
-
   </div>
-
 </footer>
