--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,9 @@
-<header class="site-header">
+<header class="Site-header">
+  <h1 class="Site-title"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
 
-    <h1 class="jl-title"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
-
-    <!-- <nav class="site-nav"> -->
-    <!--   {% for page in site.pages %} -->
-    <!--     <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a> -->
-    <!--   {% endfor %} -->
-    <!-- </nav> -->
+  <!-- <nav class="site-nav"> -->
+  <!--   {% for page in site.pages %} -->
+  <!--     <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a> -->
+  <!--   {% endfor %} -->
+  <!-- </nav> -->
 </header>
