--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,11 @@
 
   {% include head.html %}
 
-  <body>
+  <body class="Site">
 
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrap">
-        {{ content }}
-      </div>
-    </div>
+    {{ content }}
 
     {% include footer.html %}
 
