--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 ---
-<div class="page">
+<div class="Page">
 
-  <header class="page-header">
+  <header class="Page-header">
     <h1>{{ page.title }}</h1>
   </header>
 
-  <article class="page-content">
+  <article class="Page-content">
     {{ content }}
   </article>
 
