Use flexbox to push footer to bottom of page

--- a/_assets/stylesheets/app.scss
+++ b/_assets/stylesheets/app.scss
@@ -11,5 +11,6 @@
 @import 'tomorrow_night_syntax';
 @import 'base';
 @import 'typography';
+@import 'layout';
 @import 'pages';
 @import 'post_specific';
