--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,9 @@
 
     {% include header.html %}
 
-    {{ content }}
+    <div class="Site-content">
+      {{ content }}
+    </div>
 
     {% include footer.html %}
 
