--- a/_assets/stylesheets/_base.scss
+++ b/_assets/stylesheets/_base.scss
@@ -15,9 +15,9 @@
 // }
 
 body {
-  margin: 1.5rem;
+  margin: 0 1.5rem;
   @include jl-breakpoint(lg) {
     max-width: 860px;
-    margin: 1.5rem auto;
+    margin: 0 auto;
   }
 }
