Justify post paragraphs

--- a/_assets/stylesheets/_typography.scss
+++ b/_assets/stylesheets/_typography.scss
@@ -28,7 +28,7 @@ li ul, li ol {
   @include jl-vertical-rhythm($jl-font-size-base, $bottom-rows: 0);
 }
 
-.post-content p {
+.Post-content p {
   text-align: justify;
 }
 
