--- a/_assets/stylesheets/_layout.scss
+++ b/_assets/stylesheets/_layout.scss
@@ -3,18 +3,30 @@
   @include flex-direction(column);
   min-height: 100vh;
 
-  // .Site-header
-  @include jl-desc(header) {
-    margin-top: 1.5rem;
+  // .Site-main
+  @include jl-desc(main) {
+    @include flex(1);
+  }
+
+  // .Site-navbar
+  @include jl-desc(navbar) {
+    @include span(full);
+    @include jl-breakpoint(lg) {
+      @include span(3);
+    }
   }
 
   // .Site-content
   @include jl-desc(content) {
-    @include flex(1);
-  }
-
-  // .Site-footer
-  @include jl-desc(footer) {
-    margin-bottom: 1.5rem;
+    @include span(full);
+    @include jl-breakpoint(lg) {
+      @include container(960px);
+      @include push(3);
+      width: span(9);
+    }
+    @include jl-breakpoint(xl) {
+      @include push(4);
+      width: span(8);
+    }
   }
 }
