--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,5 @@
 <header class="Site-header">
-  <h1 class="Site-title"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
-
-  <!-- <nav class="site-nav"> -->
-  <!--   {% for page in site.pages %} -->
-  <!--     <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a> -->
-  <!--   {% endfor %} -->
-  <!-- </nav> -->
+  <h1 class="Site-header-title">
+    <a href="{{ site.baseurl }}/">{{ site.title }}</a>
+  </h1>
 </header>
