--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
-<div class="Page">
+<article class="Page">
 
   <header class="Page-header">
     <h1>{{ page.title }}</h1>
   </header>
 
-  <article class="Page-content">
+  <section class="Page-content">
     {{ content }}
-  </article>
+  </section>
 
-</div>
+</article>
